minio/minio-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio
spec:
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: ui
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app: minio
